MongoDB DB connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.application.name=UserRegistrationAPI
+server.port=8080
+
+spring.data.mongodb.uri=mongodb://kewateakash:Pass@123@localhost:27017/userdb
 spring.data.mongodb.database=userdb
+spring.data.mongodb.username=kewateakash
+spring.data.mongodb.password=Pass@123
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+
+logging.level.org.springframework.data.mongodb=DEBUG
 
 logging.level.org.springframework.web=DEBUG
 
